--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply bg-zinc-50 dark:bg-zinc-900;
+  }
+
+  p {
+    @apply text-gray-700 dark:text-gray-300;
+  }
+
+  h1 {
+    @apply text-4xl text-gray-900 dark:text-white font-bold;
+  }
+
+  h2 {
+    @apply text-3xl text-gray-900 dark:text-white font-bold;
+  }
+}
+
+@layer components {
+  .header {
+    @apply bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-200;
+  }
+
+  .footer {
+    @apply bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-200;
+  }
+  
+  .card {
+    @apply bg-white dark:bg-gray-800 rounded-xl shadow-md;
+  }
+}
