--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@
   h2 {
     @apply text-3xl text-gray-900 dark:text-white font-bold;
   }
+
+  h3 {
+    @apply text-lg text-gray-900 dark:text-white font-bold;
+  }
 }
 
 @layer components {
@@ -33,5 +37,9 @@
   
   .card {
     @apply bg-white dark:bg-gray-800 rounded-xl shadow-md;
+  }
+
+  .badge {
+    @apply bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-200 rounded-full px-3 py-1 text-sm font-semibold;
   }
 }
